Finished password resetting and added simple my-pages view

--- a/javascript/webshop/app/modules/index/template.html
+++ b/javascript/webshop/app/modules/index/template.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Slumpa Strumpa :: Start</title>
+		<title>Slumpa Strumpa</title>
 	</head>
 	<body>
 		<h1>Slumpa Strumpa</h1>
