--- a/javascript/webshop/app/modules/forgot-password/template.html
+++ b/javascript/webshop/app/modules/forgot-password/template.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Slumpa Strumpa :: Logga In</title>
+		<title>Slumpa Strumpa :: Glömt lösenordet?</title>
 	</head>
 	<body>
 
@@ -18,5 +18,6 @@
 				<input type="submit" />
 			</form>
 		</div>
+
 	</body>
 </html>
