--- a/javascript/webshop/app/modules/index/template.html
+++ b/javascript/webshop/app/modules/index/template.html
@@ -4,5 +4,6 @@
 	</head>
 	<body>
 		<h1>Slumpa Strumpa</h1>
+		<a href="https://github.com/slumpastrumpa/slumpastrumpa" alt="Go to GitHub!" target="_blank"><img src="/static/images/git.png" /></a>
 	</body>
 </html>
