Improved some templates

--- a/javascript/webshop/app/modules/index/index.html
+++ b/javascript/webshop/app/modules/index/index.html
@@ -1,2 +1,5 @@
 <h1>Slumpa Strumpa</h1>
 <a href="https://github.com/slumpastrumpa/slumpastrumpa" alt="Go to GitHub!" target="_blank"><img src="/static/images/git.png" /></a>
+
+<p><a href="/abonnera">Abonnera!</a></p>
+<p><a href="/bestall">Beställ!</a></p>
